src/test/deca/syntax/parser/invalid/bracket_not_closed.deca
{
    x = 2 * (3 + 4 ;
}

//# src/test/deca/syntax/parser/invalid/bracket_not_closed.deca:2:19: missing ')' at ';'